# Tada-DIP

./: .gitignore  .gitmodules  README.md  environment.yml  pyproject.toml
configs/: fbp_unet_2d.yml  fbp_unet_2d_15_views.yml
scripts/: make_fbp_dataset.py  process_data.py  tada_dip.py  train.py
src/datasets/: svct_slice_dataset.py
src/models/: fbp_unet.py  unet.py  unet_parts.py
src/physics/: cbct.py  pbct.py
