[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "src"
version = "0.0.0"
description = "3D-DIP"
readme = "README.md"
authors = [ { name = "evanbell02" } ]
license = { text = "MIT" }
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
